Add Windows mkdir / rm support.

--- a/romload/Makefile
+++ b/romload/Makefile
@@ -2,6 +2,15 @@
 # Simple Makefile for a Prog8 program.
 #
 
+# Cross-platform removal command
+ifeq ($(OS),Windows_NT)
+    RM = del /Q
+    MD = mkdir
+else
+    RM = rm -f
+    MD = mkdir -p
+endif
+
 PCC=prog8c
 PCCARGS=-asmlist -target cx16 -out build/
 
@@ -10,7 +19,7 @@ PROGS	= build/romload.prg
 all: build $(PROGS) romfile
 
 build:
-	mkdir -p build
+	$(MD) build
 
 build/romload.prg: src/romload.p8
 	$(PCC) $(PCCARGS) $< 
@@ -22,7 +31,7 @@ romfile:
 	cd build && ../bin/romfile.py
 
 clean:
-	rm -f build/* romfile.bin
+	$(RM) build/* romfile.bin
 
 emu:
 	@echo ""
