Latest snapshot of in progress gopher. Semi-broken but saving working copy.

--- a/gopher/Makefile
+++ b/gopher/Makefile
@@ -23,7 +23,7 @@ all: build $(PROGS)
 build:
 	$(MD) build
 
-build/main.prg: src/main.p8 src/libnet.p8 src/lib.p8 src/gopher.p8 src/input.p8 src/stack.p8 src/socket.p8
+build/main.prg: src/main.p8 src/libnet.p8 src/lib.p8 src/gopher.p8 src/input.p8 src/stack.p8 src/socket.p8 src/term.p8
 	$(PCC) $(PCCARGS) $< 
 
 build/%.prg : src/%.p8
@@ -35,10 +35,10 @@ clean:
 
 emu:
 	@echo ""
-	x16emu -debug -quality best -scale 2 -fsroot build/
+	x16emu -debug -quality best -scale 1 -nvram build/nvram.bin -fsroot build/
 	@echo ""
 
-run:
+run:	$(PROGS)
 	caly run --hard build/main.prg
 #	@echo ""
 #	x16emu -scale 2 -rtc -run -cartbin cartfile.bin -prg build/romload.prg -fsroot build/ -debug
